# lectures-yew-app

./: .gitignore  Cargo.toml
src/: lib.rs  model.rs
src/components/: mod.rs
src/components/lecture_list/: item.rs  mod.rs
