[package]
name = "yew-app"
version = "0.1.0"
authors = ["jangjunha <jangjunha113@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.8"
serde = "1.0.117"
serde_json = "1.0"
yew = "0.17"
yewtil = "0.3.2"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
console_error_panic_hook = "0.1.6"
